After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 675326 - cannot play mov file as audioconvert requires format interleaved and qtdemux does not set it
cannot play mov file as audioconvert requires format interleaved and qtdemux ...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-02 19:23 UTC by Alban Browaeys
Modified: 2012-05-03 22:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
add format interleaved to output audiostream (1.03 KB, patch)
2012-05-02 19:23 UTC, Alban Browaeys
rejected Details | Review

Description Alban Browaeys 2012-05-02 19:23:29 UTC
Created attachment 213323 [details] [review]
add format interleaved to output audiostream

Attach patch blindly add format="interleaved" to the audio caps sent downstream. FIxes the issue on my mov files
(twos audio with two channels audio/x-raw rate 48000 and vidoe dvcp). Open for discussion.
Comment 1 Tim-Philipp Müller 2012-05-03 22:37:35 UTC
This doesn't look quite right to me. We should only add a layout=interleaved field to raw audio caps, not to all audio caps.

I've put this somewhere else in the code now. Hope it still fixes the issue for you. If not, please re-open:

  commit a56361623c4775b56ef0b7cede5d72e06aac54fa
  Author: Alban Browaeys <prahal@yahoo.com>
  Date:   Wed May 2 21:17:43 2012 +0200

    isomp4: set layout=interleaved on raw audio caps
    
    This fixes a not-negotiated error at least on mov files with
    twos audio with two channels and video dvcp. As playbin and gst-launch
    sample coming from the qtdemux.c file uses audioconvert and the latter
    require format interleaved.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=675326